--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <link href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./img/symbol/symbol-defs.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <title>Explore Indonesia</title>
 </head>
 <body>
  <header>
-    <div>
+    <div class="header-cont">
         <a class="header-logo" href="#">Explore Indonesia</a>
         <div class="container">
             <nav class="header-nav">
@@ -36,7 +37,7 @@
     <section class="hero">
         <div class="container">
             <h1 class="hero-title">explore indonesia</h1>
-            <button class="hero-button">Start travelling</button>
+            <button class="hero-button"><a href="#">Start travelling</a></button>
             <ul>
                 <li>
                     <h5>01</h5>
