--- a/index.html
+++ b/index.html
@@ -6,26 +6,99 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@3.0.1/modern-normalize.min.css"> 
     <link rel="stylesheet" href="./css/style.min.css">
 </head>
 <body>
+    <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <defs>
+        <symbol id="icon-linkedin" viewBox="0 0 32 32">
+        <path d="M32 32h-6.154v-11.207c0-3.074-1.303-4.789-3.64-4.789-2.543 0-4.052 1.787-4.052 4.789v11.207h-6.154v-20.815h6.154v2.341c0 0 1.931-3.526 6.282-3.526 4.352 0 7.565 2.764 7.565 8.483 0 5.718 0 13.517 0 13.517zM3.001 6c-1.658 0-3.001-1.344-3.001-3.001 0-1.656 1.343-2.999 3.001-2.999 1.656 0 2.999 1.344 2.999 2.999 0.001 1.657-1.343 3.001-2.999 3.001zM0 32h6v-20h-6v20z"></path>
+        </symbol>
+        <symbol id="icon-facebook" viewBox="0 0 17 32">
+        <path d="M11.642 32v-14.4h4.663l0.762-6.4h-5.425v-3.117c0-1.648 0.045-3.283 2.501-3.283h2.488v-4.576c0-0.069-2.137-0.224-4.299-0.224-4.515 0-7.343 2.651-7.343 7.52v3.68h-4.989v6.4h4.989v14.4h6.652z"></path>
+        </symbol>
+        <symbol id="icon-google" viewBox="0 0 32 32">
+        <path d="M31.715 12.806h-15.376c0 1.599 0 4.797-0.010 6.396h8.91c-0.341 1.599-1.552 3.838-3.262 4.965-0.002-0.002-0.003 0.010-0.007 0.008-2.274 1.502-5.275 1.842-7.504 1.395-3.493-0.694-6.257-3.227-7.379-6.444 0.006-0.005 0.011-0.050 0.016-0.053-0.702-1.996-0.702-4.668 0-6.267h-0.002c0.905-2.939 3.753-5.621 7.25-6.355 2.813-0.596 5.988 0.050 8.322 2.234 0.31-0.304 4.297-4.196 4.596-4.513-7.976-7.223-20.746-4.682-25.525 4.645h-0.002c0 0 0.002 0-0.008 0.018-2.364 4.581-2.266 9.98 0.016 14.342-0.007 0.005-0.011 0.008-0.016 0.013 2.068 4.014 5.832 7.092 10.367 8.264 4.818 1.263 10.949 0.4 15.056-3.315 0.002 0.002 0.003 0.003 0.005 0.005 3.48-3.134 5.646-8.474 4.552-15.338z"></path>
+        </symbol>
+        <symbol id="icon-flower" viewBox="0 0 31 32">
+        <path d="M23.538 10.226v-4.904c0-0.542-0.439-0.981-0.981-0.981h-0.981v-2.942c0-0.542-0.439-0.981-0.981-0.981-1.388 0-3.515-0.106-6.011 1.389-1.552-0.462-2.649-0.408-3.796-0.408-0.542 0-0.981 0.439-0.981 0.981v1.961h-0.981c-0.542 0-0.981 0.439-0.981 0.981v4.904c0 3.994 3 7.3 6.865 7.785v12.811c0 0.542 0.439 0.981 0.981 0.981s0.981-0.439 0.981-0.981v-3.433h1.471c2.974 0 5.394-2.42 5.394-5.394v-1.471c0-0.542-0.439-0.981-0.981-0.981h-2.452c-1.303 0-2.499 0.464-3.433 1.236v-2.769c3.859-0.478 6.865-3.768 6.865-7.784zM21.577 10.226c0 1.745-0.772 3.322-1.992 4.403 0.019-0.157 0.030-0.317 0.030-0.48 0-2.484-0.928-4.754-2.456-6.484 1.295-0.884 2.83-1.362 4.417-1.362v3.923zM19.615 2.38v2.159c-0.181 0.037-0.361 0.079-0.54 0.126-0.636-0.712-1.362-1.319-2.154-1.809 0.856-0.313 1.765-0.476 2.694-0.476zM11.769 3.361c1.948 0 3.841 0.711 5.312 2.071-0.486 0.251-0.951 0.543-1.392 0.874-1.14-0.857-2.473-1.472-3.92-1.767v-1.178zM9.808 10.226v-3.923c4.326 0 7.846 3.52 7.846 7.846 0 1.096-0.905 1.989-2.013 1.96-3.445-0.085-5.833-2.822-5.833-5.883zM20.106 21.504h1.471v0.49c0 1.893-1.54 3.433-3.433 3.433h-1.471v-0.49c0-1.893 1.54-3.433 3.433-3.433z"></path>
+        </symbol>
+        </defs>
+        </svg>
     <main>
         <section class="sec-1">
-            <div>
-                <img src="./img/road-pic.png">
-                <h2>The walkways of Indonesia spellbind</h2>
-                <p>Lorem ipsum dolor sit amet, conse ctetur adip iscing elit. Fusce commodo magna et libero mollis rhoncus. </p>
-                <button>Learn More</button>
+            <div class="activities">
+                <div class="container">
+                     <div class="activities-el">
+                         <img src="./img/mountains.png" srcset="./img/mountains.png 1x, ./img/mountains@2x.png 2x, ./img/mountains@3x.png 3x">
+                         <div class="activ-text">
+                            <h2 class="activ-text_h2">The walkways of Indonesia spellbind</h2>
+                            <p class="activ-text_p">Lorem ipsum dolor sit amet, conse ctetur adip iscing elit. Fusce commodo magna et libero mollis rhoncus.</p>
+                            <button class="activ-text_btn">Learn More</button>
+                        </div>
+                     </div>
+                </div>
             </div>
-            <div>
-                <img src="./img/beach-pic.png">
-                <h2>Perfect beaches exude relaxation and fun</h2>
-                <p>Lorem ipsum dolor sit amet, conse ctetur adip iscing elit. Fusce commodo magna et libero mollis rhoncus. </p>
-                <button>Learn More</button>
+            <div class="activities">
+                <div class="container">
+                     <div class="activities-el">
+                         <img src="./img/beach.png" srcset="./img/beach.png 1x, ./img/beach@2x.png 2x, ./img/beach@3x.png 3x">
+                         <div class="activ-text">
+                            <h2 class="activ-text_h2">Perfect beaches exude relaxation and fun</h2>
+                            <p class="activ-text_p">Lorem ipsum dolor sit amet, conse ctetur adip iscing elit. Fusce commodo magna et libero mollis rhoncus.</p>
+                            <button class="activ-text_btn">Learn More</button>
+                        </div>
+                     </div>
+                </div>
             </div>
         </section>
     </main>
+    <footer>
+        <div class="footer-div">
+            <div class="mobile-container">
+                <div class="logo">
+                    <svg width="51" height="51">
+                        <use href="#icon-flower"></use>
+                    </svg>
+                    <a href="#" class="logo-text">
+                        <span>Explore</span><br> Indonesia</a>
+                    </div>
+               <ul class="nav">
+                    <li class="nav_el">About</li>
+                    <li class="nav_el">Pricing</li>
+                    <li class="nav_el">Company</li>
+                    <li class="nav_el">Blog</li>
+               </ul>
+               <ul class="networks">
+                    <li>
+                        <a href="#">
+                            <svg width="24" height="24">
+                                <use href="#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <svg width="24" height="24">
+                                <use href="#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <svg width="24" height="24">
+                                <use href="#icon-google"></use>
+                            </svg>
+                        </a>
+                    </li>
+               </ul>
+               <p>Copyright &copy; 2019</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
