--- a/index.html
+++ b/index.html
@@ -59,44 +59,46 @@
     </main>
     <footer>
         <div class="footer-div">
-            <div class="mobile-container">
+            <div class="foot-container">
                 <div class="logo">
-                    <svg width="51" height="51">
-                        <use href="#icon-flower"></use>
-                    </svg>
-                    <a href="#" class="logo-text">
-                        <span>Explore</span><br> Indonesia</a>
-                    </div>
-               <ul class="nav">
-                    <li class="nav_el">About</li>
-                    <li class="nav_el">Pricing</li>
-                    <li class="nav_el">Company</li>
-                    <li class="nav_el">Blog</li>
-               </ul>
-               <ul class="networks">
-                    <li>
-                        <a href="#">
-                            <svg width="24" height="24">
-                                <use href="#icon-facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <svg width="24" height="24">
-                                <use href="#icon-linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <svg width="24" height="24">
-                                <use href="#icon-google"></use>
-                            </svg>
-                        </a>
-                    </li>
-               </ul>
-               <p>Copyright &copy; 2019</p>
+                     <svg class="logo-svg" width="51" height="51">
+                         <use href="#icon-flower"></use>
+                     </svg>
+                     <a href="#" class="logo-text">
+                         <span class="logo-decor-text">EXPLORE</span><br> INDONESIA</a>
+                </div>
+                <div class="foot-el">
+                    <ul class="nav">
+                         <li><a href="#" class="nav_el">About</a></li>
+                         <li><a href="#" class="nav_el">Pricing</a></li>
+                         <li><a href="#" class="nav_el">Company</a></li>
+                         <li><a href="#" class="nav_el">Blog</a></li>
+                    </ul>
+                    <ul class="networks">
+                        <li>
+                            <a href="#">
+                                <svg class="networks_svg" width="24" height="24">
+                                    <use href="#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <svg class="networks_svg" width="24" height="24">
+                                    <use href="#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <svg class="networks_svg" width="24" height="24">
+                                    <use href="#icon-google"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul></div>
+                    <p class="sign">Copyright &copy; 2019</p> 
+                
             </div>
         </div>
     </footer>
