--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
     </main>
     <footer>
         <div class="footer-div">
+            <buuton class="mobile-btn">
+                <svg class="mobile-btn_svg" width="38" height="21">
+                    <use href="./img/symbol-defs.svg#icon-Union"></use>
+                    </svg>
+            </buuton>
             <div class="foot-container">
                 <div class="logo">
                      <svg class="logo-svg" width="51" height="51">
@@ -96,9 +101,9 @@
                                 </svg>
                             </a>
                         </li>
-                    </ul></div>
+                    </ul>
+                </div>
                     <p class="sign">Copyright &copy; 2019</p> 
-                
             </div>
         </div>
     </footer>
