--- a/index.html
+++ b/index.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <title>Explore Indonesia</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100..1000&display=swap" rel="stylesheet">
 </head>
-<body>
-    
+<body class="no-margin">
+    <main class="main-background">
+        <div class="video-section container">
+            <h2 class="video-title">Explore Our Secrets</h2>
+            <ul class="video-list">
+                <li><img src=""></li>
+                <li><img src=""></li>
+                <li><img src=""></li>
+            </ul>
+            <div class="circle-list">
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle-active"></div>
+                <div class="circle"></div>
+            </div>
+        </div>
+        <div class="numbers-container container">
+            <ul class="numbers-list">
+                <li class="number-item">
+                    <h1 class="number-title">By The Numbers</h1>
+                    <p class="number-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo magna et libero.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </li>
+                <li class="number-item">
+                    <ul class="number-section">
+                        <li class="number-section-item">
+                            <h3 class="number-title">100+</h3>
+                            <p class="number-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo magna et libero.</p>
+                        </li>
+                        <li class="number-section-item">
+                            <h3 class="number-title">43,000+</h3>
+                            <p class="number-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo.</p>
+                        </li>
+                        <li class="number-section-item">
+                            <h3 class="number-title">30+</h3>
+                            <p class="number-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo magna et libero.</p>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </main>
 </body>
 </html>
