--- a/index.html
+++ b/index.html
@@ -7,49 +7,77 @@
     <link rel="stylesheet" href="/css/style.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100..1000&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz@0,9..40;1,9..40&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,700;1,9..40,700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body class="no-margin">
     <main class="main-background">
-        <div class="video-section container">
-            <h2 class="video-title">Explore Our Secrets</h2>
-            <ul class="video-list">
-                <li><img src=""></li>
-                <li><img src=""></li>
-                <li><img src=""></li>
-            </ul>
-            <div class="circle-list">
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle-active"></div>
-                <div class="circle"></div>
+        <div class="video-section">
+            <div class="container">
+                <h2 class="video-title">Explore Our Secrets</h2>
+            </div>
+            <div id="carouselExample" class="carousel slide">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="/img/preview-img 1.png" class="d-block w-100" alt="1">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="/img/preview-img 2.png" class="d-block w-100" alt="2">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="/img/preview-img 3.png" class="d-block w-100" alt="3">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="/img/preview-img 4.png" class="d-block w-100" alt="4">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+            <div class="container">
+                <div class="circle-list">
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle-active"></div>
+                    <div class="circle"></div>
+                </div>
             </div>
         </div>
-        <div class="numbers-container container">
-            <ul class="numbers-list">
-                <li class="number-item">
-                    <h1 class="number-title">By The Numbers</h1>
-                    <p class="number-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo magna et libero.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </li>
-                <li class="number-item">
-                    <ul class="number-section">
-                        <li class="number-section-item">
-                            <h3 class="number-title">100+</h3>
-                            <p class="number-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo magna et libero.</p>
-                        </li>
-                        <li class="number-section-item">
-                            <h3 class="number-title">43,000+</h3>
-                            <p class="number-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo.</p>
-                        </li>
-                        <li class="number-section-item">
-                            <h3 class="number-title">30+</h3>
-                            <p class="number-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo magna et libero.</p>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
+        <div class="numbers-background">
+            <div class="container number-container">
+                <ul class="numbers-list">
+                    <li class="number-item">
+                        <h1 class="number-title">By The Numbers</h1>
+                        <p class="number-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo magna et libero.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </li>
+                    <li class="number-item">
+                        <ul class="number-section">
+                            <li class="number-section-item">
+                                <h3 class="number-title">100+</h3>
+                                <p class="number-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo magna et libero.</p>
+                            </li>
+                            <li class="number-section-item">
+                                <h3 class="number-title">43,000+</h3>
+                                <p class="number-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo.</p>
+                            </li>
+                            <li class="number-section-item">
+                                <h3 class="number-title">30+</h3>
+                                <p class="number-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo magna et libero.</p>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
         </div>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
