--- a/index.html
+++ b/index.html
@@ -2,62 +2,99 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/Danylo.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
     <title>exploreindonesia</title>
 </head>
 <body>
     <main>
-        <div class="continer">
-            <div class="div-ul-cont">
-                <ul class="decorativ-ul-li">
-                    <li><h1>Photo Gallery</h1></li>
-                    <li class="decorativ-li-p"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dapibus mauris in lectus tempus, eget tincidunt.</p></li>
-                </ul>
-                <ul class="ul-img">
-                <div  class="ul-div">
-                    <li class="img-li-cont">
-                        <img width="151px" height="217"px class="img-li" src="img/Image 7.png" alt="">
-                        <img width="151px" height="86px" class="img-li" src="img/Image 9.png" alt="">  
-                    </li>
-                    <li class="img-li-cont">
-                        <img width="151px" height="86px" class="img-li" src="img/Image 8.png" alt="">
-                        <img width="151px" height="217px" class="img-li" src="img/Image 10.png" alt="">
-                    </li>
+        <div class=" main-1">
+            <div class="continer">
+                <div class="div-ul-cont">
+                    <ul class="decorativ-ul-li">
+                        <li><h1 class="li-h1">Photo Gallery</h1></li>
+                        <li class="decorativ-li-p"><p class="p-decorativ-li">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dapibus mauris in lectus tempus, eget tincidunt.</p></li>
+                    </ul>
+                    <ul class="ul-img">
+                    <div class="ul-div">
+                        <li class="img-li-cont">
+                            <img class="img-1" width="151px" height="217px" class="img-li" src="img/markit.png" alt="">
+                            <img class="img-1-2" width="151px" height="86px" class="img-li" src="img/see.png" alt="">  
+                        </li>
+                        <li class="img-li-cont">
+                            <img class="img-2" width="151px" height="86px" class="img-li" src="img/hill.png" alt="">
+                            <img class="img-2-2" width="151px" height="217px" class="img-li" src="img/hills.png" alt="">
+                        </li>
+                    </div>
+                        <li class="cont-img-li">
+                            <img class="img-3" class="img-li" src="img/farmer.png" alt="">
+                            <img class="img-3" class="img-li" src="img/waterfall.png" alt="">
+                        </li>
+                    </ul>
                 </div>
-                    <li class="cont-img-li">
-                        <img width="150px" height="153px" class="img-li" src="img/Image 02.png" alt="">
-                        <img width="150px" height="153px" class="img-li" src="img/Image 01.png" alt="">
-                    </li>
-                </ul>
             </div>
         </div>
         <div class="continer">
-            <div class="blue-div">
-                <h1 class="div-h1">Getting there</h1>
-                <ul class="cont-blue">
-                    <li class="li-cont-p"><p class="number">1</p></li>
-                    <li class="blue-p"><h1>Bookings your flights</h1></li>
-                    <li><p class="p-span">Lorem ipsum dolor set,,,,<span class="li-cont-span">Show more</span></p></li>
-                </ul>
-                <ul class="cont-blue">
-                    <li class="li-cont-p"><p class="number">2</p></li>
-                    <li class="blue-p"><h1>Choosing your hotel</h1></li>
-                    <li><p class="p-span">Lorem ipsum dolor set,,,,<span class="li-cont-span">Show more</span></p></li>
-                </ul>
-                <ul class="cont-blue">
-                    <li class="li-cont-p"><img src="img/Photo.png" alt=""></li>
-                    <li class="blue-p"></li>
-                    <li><p class="p-span">Lorem ipsum dolor set,,,,<span class="li-cont-span">Show more</span></p></li>
-                </ul>
-                <ul class="cont-blue">
-                    <li class="li-cont-p"><p class="number">3</p></li>
-                    <li class="blue-p"><h1>Planning your experiences</h1></li>
-                    <li><p class="p-span">Lorem ipsum dolor set,,,,<span class="li-cont-span">Show more</span></p></li>
-                </ul>
+            <div class=" cont-blue">
+                <div class="blue-div">
+                    <h1 class="div-h1">Getting there</h1>
+                    <ul class="blue-cont">
+                        <li class="li-cont-p"><p class="number">1</p></li>
+                        <li class="blue-h1"><h1>Bookings your flights</h1></li>
+                        <li class="p-p"><p class="p-blue">Lorem ipsum dolor set,,,,</p><a class="a-red" href="">Show more</a></li>
+                    </ul>
+                    <ul class="blue-cont">
+                        <li class="li-cont-p"><p class="number">2</p></li>
+                        <li class="blue-h1"><h1 class="h1-blue">Choosing your hotel</h1></li>
+                        <li class="p-p"><p class="p-blue">Lorem ipsum dolor set,,,,</p><a class="a-red" href="">Show more</a></li>
+                    </ul>
+                    <ul class="blue-cont">
+                        <li class="li-cont-img"><img class="img-blue" src="img/motorcikle.png" alt=""></li>
+                        <li class="p-p"><p class="p-blue">Lorem ipsum dolor set,,,,</p><a class="a-red" href="">Show more</a></li>
+                    </ul>
+                    <ul class="blue-cont">
+                        <li class="li-cont-p"><p class="number">3</p></li>
+                        <li class="blue-h1"><h1>Planning your experiences</h1></li>
+                        <li class="p-p-li"><p class="p-blue">Lorem ipsum dolor set,,,,</p><a class="a-red" href="">Show more</a></li>
+                    </ul>
+                </div>
+                <div class="div-blue">
+                    <ul class="ul-number">
+                        <li class="li-number"><p class="number-1">1</p></li>
+                        <li class="li-number"><p class="number-2">2</p></li>
+                        <li class="li-number"><p class="number-3">3</p></li>
+                    </ul>
+                    <div class="flex-div-blue">
+                        <h1 class="h1-div">Getting there</h1>
+                        <ul class="desctop-ul">
+                            <li>
+                                <h1 class="desctop-h1">Bookings your flights</h1>
+                                <p class="desctop-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dapibus mauris in lectus tempus, eget tincidunt lacus varius. Sed euismod orci dictum faucibus malesuada. Praesent sed eros tincidunt, viverra neque auctor, lobortis enim.</p>
+                            </li>
+                            <li class="li-desctop">
+                                <h1 class="desctop-h1">Choosing your hotel</h1>
+                                <p class="desctop-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dapibus mauris in lectus tempus, eget tincidunt lacus varius. Sed euismod orci dictum faucibus malesuada. Praesent sed eros tincidunt, viverra neque auctor, lobortis enim.</p>
+                            </li>
+                            <li class="desctop-li">
+                                <img width="255px" height="165px" src="img/motorcikle 2.png" alt="">
+                                <div class="small-div">
+                                    <h1 class="desctop-h1">Travelling there</h1>
+                                    <p class="p-desctop">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dapibus mauris in lectus tempus, eget tincidunt.</p>
+                                </div>
+                                </li>
+                            <li class="desctop-li-h1">
+                                <h1 class="desctop-h1">Planning your experiences</h1>
+                                <p class="desctop-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dapibus mauris in lectus tempus, eget tincidunt lacus varius. </p>
+                            </li>
+                        </ul>
+                        <button class="desctop-button">Learn More</button>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
 </body>
 </html>
-<!-- https://github.com/lupiian/project1.git  ☭⃠ ☭⃠ ☭⃠  -->
+<!-- https://github.com/lupiian/project1.git  owerflow hidden display hidden  -->
